--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>staff-manager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
-
+		<!-- **********************************************************持久层访问依赖*********************************************************************** -->
 		<!--mysql访问 -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -26,32 +26,37 @@
 			<artifactId>mybatis</artifactId>
 			<version>3.2.8</version>
 		</dependency>
-		
-		<!--Mybatis Spring依赖  -->
+
+		<!--Mybatis Spring依赖 -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.0</version>
 		</dependency>
-		
-	<!--JSP、Serverlet相关依赖 -->
+
+		<!-- **********************************************************Web层访问依赖*********************************************************************** -->
+
+		<!--JSP、Serverlet相关依赖 -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- JSTL 依赖 -->
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<!-- JSTL 标签库依赖 -->
 		<dependency>
 			<groupId>taglibs</groupId>
 			<artifactId>standard</artifactId>
 			<version>1.1.2</version>
 		</dependency>
-
+		<!-- **********************************************************Spring相关依赖*********************************************************************** -->
 		<!--Spring Web相关依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -73,6 +78,29 @@
 			<version>2.8.1</version>
 		</dependency>
 
+		<!--springMVC文件上传依赖 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.1</version>
+		</dependency>
+
+
+		<!--Spring JDBC相关依赖 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.3.1.RELEASE</version>
+		</dependency>
+
+		<!--事务依赖 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>4.3.3.RELEASE</version>
+		</dependency>
+
+		<!-- **********************************************************日志相关依赖*********************************************************************** -->
 
 		<!--使用slf4j+localback做日志 -->
 		<dependency>
@@ -80,31 +108,14 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.7</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+		<!--slf4j实现相关依赖  -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.7</version>
 		</dependency>
 
-
-
-		<!--使用fastjson来格式化数据 -->
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>1.2.12</version>
-		</dependency>
-
-		<!--springMVC文件上传依赖 -->
-		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-		<dependency>
-			<groupId>commons-fileupload</groupId>
-			<artifactId>commons-fileupload</artifactId>
-			<version>1.3.1</version>
-		</dependency>
-
+		<!-- **********************************************************测试相关依赖*********************************************************************** -->
 		<!-- 单元测试依赖 -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -112,12 +123,21 @@
 			<version>4.12</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<!-- Spring 测试相关依赖 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>4.3.3.RELEASE</version>
 		</dependency>
+
+		<!-- **********************************************************其他相关依赖*********************************************************************** -->
+		<!--使用fastjson来格式化数据 -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.12</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
